--- a/frontend_project-portfolio/package.json
+++ b/frontend_project-portfolio/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "@sanity/client": "^6.1.2",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.12.14",
