--- a/frontend_project-portfolio/package.json
+++ b/frontend_project-portfolio/package.json
@@ -14,14 +14,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
+    "@portabletext/react": "^3.0.4",
     "@sanity/client": "^6.1.2",
     "@sanity/image-url": "^1.0.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.14",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-tooltip": "^5.13.1"
+    "react-tooltip": "^5.13.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "sweetalert2": "^11.7.23"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
